--- a/about.html
+++ b/about.html
@@ -6,19 +6,25 @@
 -->
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>about me</title>
 	<link rel="stylesheet" href="css/styles.css">
 	</head> 
+	
 <body>
+	<div class="mobile">
 	<header><h1>Facts about me. &#128158;</h1> </header>
 	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth " class="center">
 
 	<nav>
-			<p><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;
-			<a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; 
-			<a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;
-			<a href="about.html">More about me</a> </p>
+		<ul>
+
+			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="about.html">More about me</a> </p></li>
+			</ul>
 	
 	</nav>
 	
@@ -34,6 +40,7 @@
 		</ol>
 
     </div>
+</div>
 	</main>
 	
 	<footer>
