--- a/projects.html
+++ b/projects.html
@@ -3,23 +3,26 @@
 
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
 	</head> 
 <body>
+	<div class="mobile">
 	<header> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
 	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth of the creator" class="center">
 
 	<nav>
-        <ul>
-            
-            <li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
-            <li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp;</li>
-            <li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
-            <li><a href="about.html">More about me</a></li>
-            
-        </ul>
+        <div class="lists">
+			<ul>
+
+			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="about.html">More about me</a></li>
+			</ul>
+		</div>
 	</nav>
 	
 	<main>
@@ -27,7 +30,6 @@
          <li><a href="ch4/apply/index.html"> Chapter four apply</a></li>
       <li><a href="ch4/extend/extend04.html">Chapter four extend</a></li> 
 	  <li><a href="ch5/apply/index.html">Chapter five apply</a></li>
-		<li> <a href="ch5/extend/index.html">Chapter five extend</li>
 	</ul>
 	</main>
 	
@@ -38,4 +40,5 @@
 	
 	
 	</footer>
+</div>
 </body>
