--- a/contact.html
+++ b/contact.html
@@ -6,21 +6,28 @@
 -->
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 		<title>Contact me</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head> 
 <body>
+	<div class="mobile">
 <!-- The purpose is that it shows the title of the page, static
 -->
 			<header> <h1>Contact me</h1> </header>
 <!-- The purpose is so that you can switch back and forth between pages, static
 -->
 	<nav>
-		<p><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;
-			<a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; 
-			<a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;
-			<a href="about.html">More about me</a> </p>
+		<div class="lists">
+			<ul>
+
+			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="about.html">More about me</a></li>
+			</ul>
+		</div>
 	
 	</nav>
 	
@@ -30,6 +37,7 @@
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.3594711299947!2d-81.62700222323942!3d41.34453977130528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830e6dd7da6a0c5%3A0xe21fba97e75c809!2sCuyahoga%20Valley%20Career%20Center!5e0!3m2!1sen!2sus!4v1696961873505!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+</div>
 	</main>
 	
 	<footer>
