--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 
 <html lang="en">
 	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<meta charset="utf-8">
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 	<style>
 		h1 {
 			text-align: center;
@@ -26,15 +31,20 @@
 	</style>
 	</head> 
 <body>
+	<div class="mobile">
 	<header> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
 	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth" class="center">
 
 	<nav>
-			<p><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;
-			<a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; 
-			<a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;
-			<a href="about.html">More about me</a> </p>
-	
+		<div class="lists">
+			<ul>
+
+			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="about.html">More about me</a></li>
+			</ul>
+		</div>
 	</nav>
 	
 	<main>
@@ -45,7 +55,9 @@
  
 	<p> <a href="mailto:robinson.noah@stu.cvccworks.edu">email me</a></p>
 			<p>&copy; Copyright 2023. All Rights Reserved.</p>
+		
 	
 	
 	</footer>
+</div>
 </body>
