--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
@@ -12,14 +13,15 @@
 	<img src="portfolio3.jpg" alt="a picture taken in photobooth of the creator" class="center">
 
 	<nav>
-        <ul>
-            
-            <li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
-            <li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp;</li>
-            <li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
-            <li><a href="about.html">More about me</a></li>
-            
-        </ul>
+        <div class="lists">
+			<ul>
+
+			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="about.html">More about me</a></li>
+			</ul>
+		</div>
 	</nav>
 	
 	<main>
