--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,7 @@
          <li><a href="ch4/apply/index.html"> Chapter four apply</a></li>
       <li><a href="ch4/extend/extend04.html">Chapter four extend</a></li> 
 	  <li><a href="ch5/apply/index.html">Chapter five apply</a></li>
+		<li><a href="fitness/index.html">Fitness</li>
 	</ul>
 	</main>
 	
