--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
       <li><a href="ch4/extend/extend04.html">Chapter four extend</a></li> 
 	  <li><a href="ch5/apply/index.html">Chapter five apply</a></li>
 		<li><a href="fitness/index.html">Fitness</li>
+		<li><a href="ch6/apply/index.html">Chapter six apply</li>
 	</ul>
 	</main>
 	
