--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,8 @@
          <li><a href="ch4/apply/index.html"> Chapter four apply</a></li>
       <li><a href="ch4/extend/extend04.html">Chapter four extend</a></li> 
 	  <li><a href="ch5/apply/index.html">Chapter five apply</a></li>
+		<li><a href="chapter06/apply/index.html"> Chapter six apply</a></li>
+		<li><a href="chapter07/extend07.html"> Chapter seven extend</li>
 	</ul>
 	</main>
 	
