--- a/extend/extend07.html
+++ b/extend/extend07.html
@@ -55,7 +55,7 @@
                 <p> i used w3c schools to help me <a href="https://www.w3schools.com/howto/howto_css_three_columns.asp">Creating 3 column layouts</a></p>
                 
                 <!-- Use the paragraph element below to note the resource you used to create your favicon. Include a link to the resource that opens in a new tab. -->
-                <p>i used favcoin.io <a href="https://favicon.io/favicon-generator">Creating the favcoin</a>/</p>
+                <p>i used favcoin.io <a href="https://favicon.io/favicon-generator">Creating the favcoin</a></p>
             </aside>
 </div>
         </main>
