--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,9 @@
       <li><a href="ch4/extend/extend04.html">Chapter four extend</a></li> 
 	  <li><a href="ch5/apply/index.html">Chapter five apply</a></li>
 		<li><a href="chapter06/apply/index.html"> Chapter six apply</a></li>
+		<li> <a href="chapter06/extend/extend06.html"> Chapter six extend</li>
 		<li><a href="chapter07/extend/extend07.html"> Chapter seven extend</li>
+		<li> <a href="chapter06/extend/extend06.html"> Chapter six extend</li>
 	</ul>
 	</main>
 	
