--- a/fitness/index.html
+++ b/fitness/index.html
@@ -13,7 +13,7 @@
 	
 </head>
 <body> 
-	<div id="container">
+	<section id="container">
 	<header> 
 			<h1> Forward Fitness Center </h1>
 			
@@ -28,18 +28,19 @@
 					<li><a href="nutrition.html">Nutrition </a></li>
 					<li><a href="contact.html">Contact us</a></li>
 			</ul>
+			
 		</nav>
 		
 		
 		<!-- Hero Image -->
-		<div id="hero" class="Tablet-desktop">
+		<section id="hero" class="Tablet-desktop">
 			<img src="images/hero-image.jpg" alt="left arm extended holding a weight">
 			
-		</div>
+		</section>
 		
 		<main>
 		
-		<div class="mobile">
+		<section class="mobile">
 			
 		<p>Welcome to the Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.</p>
 
@@ -61,12 +62,30 @@
 				<li> Sunday: Closed</li>
 			</ul>
 			
-			</div>
-		</main>
+		</section>
+		
 		
 			
-	  </div>
-	  <div class="tablet-desktop">
+	</section>
+	  <section class="grid">
+		<figure class="frame">
+			<a href="classes.html"><img src="images/fitness-group.jpg" alt="group of fitness people"></a>
+			<figcaption class="pic-text">Group Fitness</figcaption>
+		</figure>
+		<figure class="frame">
+			<a href="nutrition.html">
+				<img src="images/food-heart.jpg" alt="healthy food in the shape of a heart">
+			</a>
+			<figcaption class="pix-text"> Meal Plans</figcaption>
+		</figure>
+		<figure class="frame">
+			<a href="contact.html">
+				<img src="images/personal-trainer.jpg" alt="personal trainer with a clipboard"></a>
+				<figcaption class="pic-text"> Start Today</figcaption>
+			
+		</figure>
+	</section>
+	  <section class="tablet-desktop">
 		<p>Welcome to the Forward Fitness Club. Our mission is to help our clients meet their fitness and nutrition goals.</p>
 
 		<p> If you have struggled with getting healthy and need the motiivation and resources to
@@ -79,8 +98,8 @@
 		<p> </p>
 
 
-
-	  </div>
+</main>
+</section>
 	<footer> 
 	<p>&copy; Copyright 2023. All rights reserved, </p>
 	<P><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
