--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -40,6 +40,48 @@
 		C%20Boston%2C%20MA%2002210!5e0!3m2!1sen!2sus!4v1694620447525!5m2!1sen!2sus" 
 		width="600" height="450" allowfullscreen class="map"></iframe>
 			</div>
+
+			<div id="form">
+				<h2>CComplete the form below to begin with your free trial.</h2>
+
+				<form class="form-grid">
+					<fieldset>
+						<legend>Customer information</legend>
+					
+						<label for="fName">First Name:</label>
+						<input type="text" id="fName" name="fName" required>
+						<label for="lName">Last Name:</label>
+						<input type="text" name="lName" if="lName" required>
+						<label for="email">Email</label>
+						<input type="email" id="email" name="email" required>
+						<label for="phone">Phone:</label>
+						<input type="tel" id="Phone" name="Phone" required>
+					</fieldset>
+					<fieldset>
+						<legend>Additional Information</legend>
+						<p>I would like more information about:</p>
+						<label for="groupfit"><input type="checkbox" name="interest" id="groupfit" valu="Group Fitness">Group Fitness</label>
+
+						<label for="prtrain"><input type="checkbox" name="interest" id="prtrain" Value="Personal Training">Personal Training</label>
+
+						<label for="nutr"><input type="checkbox" name="interest" id="nutr" vaalue="Nutrition"> Nutrition</label>
+					</fieldset>
+					<fieldset>
+						<legend>Refferal Source</legend>
+						<label for="reference">How did you find us?</label>
+						<select name="reference" id="reference">
+							<option value="ad">Advertisement</option>
+							<option value="friend">Friend</option>
+							<option value="google">Google</option>
+							<option value="social">Social Media</option>
+							<option value="other">Other</option>
+						</select>
+						<label for="questions">Questions?</label>
+						<textarea id="questions" name="questions" rows="5" cols="35"></textarea>
+					</fieldset>
+					<input type="submit" id="submit" class="btn">
+				</form>
+			</div>
 			
 			
 		</main>
