--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 
@@ -27,10 +26,14 @@
 	</style>
 	</head> 
 <body>
+	
 	<div class="mobile">
 	<header> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
+	<figure>
 	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth" class="center">
-
+	<figcaption>A picture of me</figcaption>
+	
+	</figure>
 	<nav>
 		<div class="lists">
 			<ul>
@@ -39,6 +42,7 @@
 			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
 			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
 			<li><a href="about.html">More about me</a></li>
+			<li><a href="new.html">The steps of meditation</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -54,6 +58,10 @@
 		
 	
 	
+	</footer>
+</div>
+</body>
+</html>	
 	</footer>
 </div>
 </body>
