--- a/fitness/about.html
+++ b/fitness/about.html
@@ -27,6 +27,14 @@
 		</nav>
 		
 		<main>
+			<video controls poster="images/hero-image.jpg">
+			<source src="media/ffc_video.mp4" type="video/mp4">
+			<source src="media/ffc_video.webm" type="video/webm">
+			<track src="media/captions.vtt" kind="captions" srclanf="en" label="Captions">
+			<track src="media/descriptions.vtt" kind="captions" srclang="en" label="English Descriptions">
+			<p>Your browser does not support the video element.</p>
+			
+		</video>
 		<div id ="weights">
 		<h1>Weights</h1>
 		<img src="images/people-with-weights.jpg" alt="Two people working out with weight in a gym" class="round">
