--- a/fitness/classes.html
+++ b/fitness/classes.html
@@ -13,10 +13,12 @@
 
 </head>
 <body> 
+	
+	<div id="container">
 	<header> 
 		<h1> Forward Fitness Center </h1>
 	</header>
-	<div id="container">
+	
 		<header> 
 			<h1> Forward Fitness Center </h1>
 			<a href="index.html"> <img src="images/forward-fitness-logo.png"
@@ -38,14 +40,21 @@
         
         </div>
 	<main>
+		<video controls poster="images/hero-image.jpg">
+			<source src="media/ffc_video.mp4" type="video/mp4">
+			<source src="media/ffc_video.webm" type="video/webm">
+			<p>Your browser does not support the video element.</p>
+			
+		</video>
+		
 		<div id="hero" class="mobile">
             <h3>Group Fitness Center</h3>
-            <p>Boot Camp: TR 5am & 5pm</p> <!--& use &amp;-->
-            <p>Cardio: MWF 6am & 6pm</p>
-            <p>Kickboxing: MWF 8am & 7:15pm</p>
-            <p>Spinning: TR 6am & 6pm</p>
-            <p>Yoga: TR 6am & 6pm</p>
-            <p>Zumba: MWF 7am & 6pm</p>
+            <p>Boot Camp: TR 5am &amp; 5pm</p> <!--& use &amp;-->
+            <p>Cardio: MWF 6am &amp; 6pm</p>
+            <p>Kickboxing: MWF 8am &amp; 7:15pm</p>
+            <p>Spinning: TR 6am &amp; 6pm</p>
+            <p>Yoga: TR 6am &amp; 6pm</p>
+            <p>Zumba: MWF 7am &amp; 6pm</p>
         </div>
 		<div class="desktop">
             <table><!--Start Table-->
@@ -101,11 +110,20 @@
             </tr>
         </table>
         </div>
-		
+	
+		<div id="music-sample">
+			<h3>We play upbeat music to help keep you focused during your workout.
+				Below is a sample of the type of music played duringa class workout.</h3>
+			<audio controls>
+				<source src="media/ffc_audio.mp3" type="audio/mp3">
+				<source src="media/ffc_audio.ogg" type="audio.ogg">
+					<p>Your browser doesnt support the audio element.</p>
+			</audio>
+		</div>
 	</main>
 	<footer> 
-	<p>&copy; Copyright 2023. All rights reserved, </p>
-	<p> forwardfitness@club.net</p>
+		<p> &copy; Copyright 2023. All rights reserved, </p>
+		<p> forwardfitness@club.net</p>
 	
 	</footer>
 	</div>
