--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
 	</head> 
 <body>
 	<div class="mobile">
-	<header> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
-	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth of the creator" class="center">
+	<header class="center"> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
+	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth " class="center">
 
 	<nav>
         <div class="lists">
@@ -26,15 +26,17 @@
 	</nav>
 	
 	<main>
-        <ul>
-         <li><a href="ch4/apply/index.html"> Chapter four apply</a></li>
-      <li><a href="ch4/extend/extend04.html">Chapter four extend</a></li> 
-	  <li><a href="ch5/apply/index.html">Chapter five apply</a></li>
-		<li><a href="chapter06/apply/index.html"> Chapter six apply</a></li>
-		<li> <a href="chapter06/extend/extend06.html"> Chapter six extend</li>
-		<li><a href="chapter07/extend/extend07.html"> Chapter seven extend</li>
-		<li> <a href="chapter06/extend/extend06.html"> Chapter six extend</li>
-	</ul>
+      
+	<div class="grid">
+		<div class="grid-item"><a href="ch4/apply/index.html"> Chapter four apply</a></div>
+		<div class="grid-item"><a href="ch4/extend/extend04.html">Chapter four extend</a></div>
+		<div class="grid-item"><a href="ch5/apply/index.html">Chapter five apply></a></div>
+		<div class="grid-item"><a href="chapter06/apply/index.html"> Chapter six apply</a></div>
+		<div class="grid-item"><a href="chapter07/extend/extend07.html"> Chapter seven extend</a></div>
+		<div class="grid-item"><a href="chapter06/extend/extend06.html"> Chapter six extend</a></div>
+		<div class="grid item"><a href="fitness/index.html">fitness</a></div>
+		
+	</div>
 	</main>
 	
 	<footer>
@@ -46,3 +48,4 @@
 	</footer>
 </div>
 </body>
+</html>
