--- a/index.html
+++ b/index.html
@@ -6,32 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<meta charset="utf-8">
-	<title>Noah's Portfolio</title>
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+		<title>Noah's Portfolio</title>
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
-	<style>
-		h1 {
-			text-align: center;
 
-			
-		}
-		footer{
-			text-align: center;
-			vertical-align: bottom;
-		}
-
-	</style>
 	</head> 
 <body>
 	
-	<div class="mobile">
+	<div class="mobile">	
 	<header> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
 	<figure>
-	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth" class="center">
-	<figcaption>A picture of me</figcaption>
+		<img src="images/portfolio3.jpg" alt="a picture taken in photobooth" class="center">
+		<figcaption>A picture of me</figcaption>
+		</figure>
+	</div>
 	
 	</figure>
 	<nav>
@@ -51,7 +42,7 @@
 	
 	</main>
 	
-	<footer>
+	<footer> 
  
 	<p> <a href="mailto:robinson.noah@stu.cvccworks.edu">email me</a></p>
 			<p>&copy; Copyright 2023. All Rights Reserved.</p>
@@ -61,7 +52,4 @@
 	</footer>
 </div>
 </body>
-</html>	
-	</footer>
-</div>
-</body>
+</html>
