--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,13 @@
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
 	</head> 
-<body>
-	<div class="mobile">
-	<header class="center"> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
-	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth " class="center">
+<header class="center"> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
 
+	<div class="mobile">
+
+	
+	<img src="images/portfolio3.jpg" alt="a picture taken in photobooth " class="center">
+<body>
 	<nav>
         <div class="lists">
 			<ul>
@@ -34,7 +36,7 @@
 		<div class="grid-item"><a href="chapter06/apply/index.html"> Chapter six apply</a></div>
 		<div class="grid-item"><a href="chapter07/extend/extend07.html"> Chapter seven extend</a></div>
 		<div class="grid-item"><a href="chapter06/extend/extend06.html"> Chapter six extend</a></div>
-		<div class="grid item"><a href="fitness/index.html">fitness</a></div>
+		<div class="grid-item"><a href="fitness/index.html">fitness</a></div>
 		
 	</div>
 	</main>
