--- a/fitness/about.html
+++ b/fitness/about.html
@@ -13,9 +13,11 @@
 		<div id="container">
 		<header> 
 			<h1> Forward Fitness Center </h1>
-			
+			<a href="index.html"> <img src="images/forward-fitness-logo.png"
+				alt="forward fitness club logo"></a>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 		</header>
+		
 		<nav>
 <ul>
 					<li><a href="index.html">Home </a></li>
@@ -25,16 +27,11 @@
 					<li><a href="contact.html">Contact us</a></li>
 			</ul>
 		</nav>
-		
 		<main>
-			<video controls poster="images/hero-image.jpg">
-			<source src="media/ffc_video.mp4" type="video/mp4">
-			<source src="media/ffc_video.webm" type="video/webm">
-			<track src="media/captions.vtt" kind="captions" srclanf="en" label="Captions">
-			<track src="media/descriptions.vtt" kind="captions" srclang="en" label="English Descriptions">
-			<p>Your browser does not support the video element.</p>
+		
 			
-		</video>
+			
+	
 		<div id ="weights">
 		<h1>Weights</h1>
 		<img src="images/people-with-weights.jpg" alt="Two people working out with weight in a gym" class="round">
