--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -16,7 +16,8 @@
 	<div id="container">
 		<header> 
 			<h1> Forward Fitness Center </h1> 
-	
+			<a href="index.html"> <img src="images/forward-fitness-logo.png"
+				alt="forward fitness club logo"></a>
 		</header>
 		<nav>
 		<ul>
