--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,7 @@
 		<div class="grid-item"><a href="chapter06/extend/extend06.html"> Chapter six extend</a></div>
 		<div class="grid-item"><a href="chapter08/extend/extend08.html">Chapter eight extend</a></div>
 		<div class="grid-item"><a href="chapter08/apply/index.html"> Chapter eight apply</a></div>
+		<div class="grid item"><a href="chapter09/analyze/index.html">Chapter 9 analyze</a></div>
 		<div class="grid-item"><a href="fitness/index.html">fitness</a></div>
 		
 	</div>
