--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,9 @@
 		<div class="grid-item"><a href="chapter07/extend/extend07.html"> Chapter seven extend</a></div>
 		<div class="grid-item"><a href="chapter06/extend/extend06.html"> Chapter six extend</a></div>
 		<div class="grid-item"><a href="fitness/index.html">fitness</a></div>
+		<div class="grid-item"><a href="chapter08/extend/extend08.html">Chapter eight extend</a></div>
+		<div class="grid-item"><a href="chapter08/apply/index.html"> Chapter eight apply</a></div>
+		<div class="grid item"><a href="chapter09/apply/index.html">Chapter 9 apply</a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
