--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 		<div class="grid-item"><a href="fitness/index.html">fitness</a></div>
 		<div class="grid-item"><a href="chapter08/extend/extend08.html">Chapter eight extend</a></div>
 		<div class="grid-item"><a href="chapter08/apply/index.html"> Chapter eight apply</a></div>
-		<div class="grid item"><a href="chapter09/apply/index.html">Chapter 9 apply</a></div>
+		<div class="grid-item"><a href="chapter09/apply/index.html">Chapter 9 apply</a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
