--- a/fitness/classes.html
+++ b/fitness/classes.html
@@ -40,12 +40,7 @@
         
         </div>
 	<main>
-		<video controls poster="images/hero-image.jpg">
-			<source src="media/ffc_video.mp4" type="video/mp4">
-			<source src="media/ffc_video.webm" type="video/webm">
-			<p>Your browser does not support the video element.</p>
-			
-		</video>
+		
 		
 		<div id="hero" class="mobile">
             <h3>Group Fitness Center</h3>
@@ -65,7 +60,6 @@
                 <th>Times</th>
                 <th>Instructor</th>
                 <th>Room</th>
-                </table>
             </tr>
             <tr><!--Row 2--> 
                 <td>Cardio</td>
@@ -76,7 +70,7 @@
             </tr>
             <tr><!--Row 3-->
                 <td>Boot Camp</td>
-                <td>ZTue, Thu</td>
+                <td>Tue, Thu</td>
                 <td>5:0am, 5:00pm</td>
                 <td>Taylor</td>
             </tr>
