--- a/fitness/index.html
+++ b/fitness/index.html
@@ -17,8 +17,8 @@
 	<header> 
 			<h1> Forward Fitness Center </h1>
 			
-			<img src="images/forward-fitness-logo.png"
-			alt="forward fitness club logo" height="220" width="297">
+			<a href="index.html"> <img src="images/forward-fitness-logo.png"
+				alt="forward fitness club logo"></a>
 	</header>
 		<nav>
 			<ul>
@@ -31,7 +31,7 @@
 			
 		</nav>
 		
-		
+		</section>
 		<!-- Hero Image -->
 		<section id="hero" class="Tablet-desktop">
 			<img src="images/hero-image.jpg" alt="left arm extended holding a weight">
@@ -52,7 +52,7 @@
 			<p>For more information about how to stay active visit <a href="https://www.hhs.gov/fitness/be-active/index.html" target="_blank"> U.S department of health and services</a>.</p>
 			<h3> Free one-week Trial membership!</h3>
 			<p> call us today to get started </p>
-			<p</a class="tel-link"><a href="tel=8145559608" (814) 555-9608></a></p>
+			<p></a class="tel-link"><a href="tel=8145559608" (814) 555-9608></a></p>
 
 			<h4>Fitness club hours:</h4>
 			<ul class="hours">
@@ -66,7 +66,10 @@
 		
 		
 			
-	</section>
+	
+	<
+	
+	
 	  <section class="grid">
 		<figure class="frame">
 			<a href="classes.html"><img src="images/fitness-group.jpg" alt="group of fitness people"></a>
@@ -105,5 +108,5 @@
 	<P><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
 	
 	</footer>
-</body>
+
 </html>
