--- a/fitness/about.html
+++ b/fitness/about.html
@@ -28,6 +28,16 @@
 			</ul>
 		</nav>
 		<main>
+			<video controls poster="images/hero-image.jpg">
+			<source src="media/ffc_video.mp4" type="video/mp4">
+			<source src="media/ffc_video.webm" type="video/webm">
+			<track src="media/captions.vtt" kind="captions" srclanf="en" label="Captions">
+			<track src="media/descriptions.vtt" kind="captions" srclang="en" label="English Descriptions">
+			<p>Your browser does not support the video element.</p>
+
+
+
+		</video>
 		
 			
 			
