--- a/Portfolio/fitness/template.html
+++ b/Portfolio/fitness/template.html
@@ -17,6 +17,20 @@
 		<h1> Forward Fitness Center </h1>
 	</header>
 	<div id="container">
+		<!-- Mobile Nav-->
+
+		<nav class="mobile-nav">
+			<div id="menu links">
+				<a href="index.html">Home</a>
+				<a href="about.html">About Us</a>
+				<a href="classes.html">Classes</a>
+				<a href="nutrition.html">Nutrition</a>
+				<a href="contact.html">Contact Us</a>
+			</div>
+			<a class="menu-icon">
+				<div>&#9776;</div>
+			</a>
+		</nav>
 		<header> 
 			<h1> Forward Fitness Center </h1>
 			<a href="index.html"> <img src="images/forward-fitness-logo.png"
@@ -42,5 +56,6 @@
 	
 	</footer>
 	</div>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
