--- a/Portfolio/fitness/nutrition.html
+++ b/Portfolio/fitness/nutrition.html
@@ -10,23 +10,38 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcourt icon" href="images//favcoin.ico"> <link rel="icon" type="images.png" sizes="32x32"
-    href="images/favcon-32.png">
+    <link rel="shortcourt icon" href="images//favcoin.ico"> 
+    <link rel="icon" type="images.png" sizes="32x32" href="images/favcon-32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png"> 
     <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
 
 </head>
 <body> 
-	<header> 
+	<header id="ffc-logo"> 
 		<h1> Forward Fitness Center </h1>
 	</header>
 	<div id="container">
+        
 		<header> 
 			<h1> Forward Fitness Center </h1>
 			<a href="index.html"> <img src="images/forward-fitness-logo.png"
 			alt="forward fitness club logo"></a>
 		</header>
-		<nav>
+        <!-- Mobile Nav-->
+
+		<nav class="mobile-nav">
+			<div id="menu-links">
+				<a href="index.html">Home</a>
+				<a href="about.html">About Us</a>
+				<a href="classes.html">Classes</a>
+				<a href="nutrition.html">Nutrition</a>
+				<a href="contact.html">Contact Us</a>
+			</div>
+			<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;</div>
+			</a>
+		</nav>
+		<nav class="tablet-desktop">
 		<ul>
 					<li><a href="index.html">Home </a></li>
 					<li><a href="about.html">About </a></li>
@@ -92,7 +107,7 @@
 	<footer> 
 	<p>&copy; Copyright 2023. All rights reserved, </p>
 	<p> forwardfitness@club.net</p>
-	
+	<script src="scripts/script.js"></script>
 	</footer>
 	</div>
 </body>
