--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -28,6 +28,7 @@
 	</nav>
 	
 	<main>
+		
       
 	<div class="grid">
 		<div class="grid-item"><a href="ch4/apply/index.html"> Chapter four apply</a></div>
@@ -37,6 +38,12 @@
 		<div class="grid-item"><a href="chapter07/extend/extend07.html"> Chapter seven extend</a></div>
 		<div class="grid-item"><a href="chapter06/extend/extend06.html"> Chapter six extend</a></div>
 		<div class="grid-item"><a href="fitness/index.html">fitness</a></div>
+		<div class="grid-item"><audio controls>
+			<source src="media/yellowstone-fish.mp3">
+			<source src="media/yellowstone-fish.ogg">
+			<p>Your browser may not support the audio</p>
+
+		</audio></div>
 		
 	</div>
 	</main>
