--- a/fitness/index.html
+++ b/fitness/index.html
@@ -6,21 +6,40 @@
 	<title> Forward Fitness Club </title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" context="The Forward Fitness Club is an athlete fitness center dedicated to helping clients acheive their fitness and nutrition goals.">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	
 	<link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
 	
 </head>
-<body> 
+
 	<section id="container">
-	<header> 
+	<header id="ffc-logo"> 
 			<h1> Forward Fitness Center </h1>
+			
 			
 			<a href="index.html"> <img src="images/forward-fitness-logo.png"
 				alt="forward fitness club logo"></a>
 	</header>
-		<nav>
+	<body> 
+		<!--Skip to Content Link-->
+		<a class="skip" href="#content">Skip to Content</a>
+		<!-- Mobile Nav-->
+
+		<nav class="mobile-nav">
+			<div id="menu-links">
+				<a href="index.html">Home</a>
+				<a href="about.html">About Us</a>
+				<a href="classes.html">Classes</a>
+				<a href="nutrition.html">Nutrition</a>
+				<a href="contact.html">Contact Us</a>
+			</div>
+			<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;</div>
+			</a>
+		</nav>
+		<nav class="tablet-desktop">
 			<ul>
 					<li><a href="index.html">Home </a></li>
 					<li><a href="about.html">About </a></li>
@@ -38,7 +57,7 @@
 			
 		</section>
 		
-		<main>
+		<main id="content">
 		
 		<section class="mobile">
 			
@@ -67,7 +86,7 @@
 		
 			
 	
-	<
+	
 	
 	
 	  <section class="grid">
@@ -79,7 +98,7 @@
 			<a href="nutrition.html">
 				<img src="images/food-heart.jpg" alt="healthy food in the shape of a heart">
 			</a>
-			<figcaption class="pix-text"> Meal Plans</figcaption>
+			<figcaption class="pic-text"> Meal Plans</figcaption>
 		</figure>
 		<figure class="frame">
 			<a href="contact.html">
@@ -103,10 +122,25 @@
 
 </main>
 </section>
-	<footer> 
-	<p>&copy; Copyright 2023. All rights reserved, </p>
-	<P><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
-	
-	</footer>
 
+
+<footer> 
+	<div class="copyright">
+<p>&copy; Copyright 2023. All rights reserved, </p>
+<P><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
+	</div>
+	<div class="social">
+		<a href="https://www.facebook.com.fwdfitclub" target="_blank">
+		<img src="images/facebook-logo.png" alt="black and white Facebook logo"></a>
+		<a href="https://www.twitter.com.fwdfitclub" target="_blank">
+			<img src="images/twitter-logo.png" alt="black and white twitter logo"></a>
+
+		
+
+	
+	</div>
+</footer>
+
+	<script src="scripts/script.js"></script>
+</body>
 </html>
