--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -4,22 +4,41 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title> Forward Fitness Club </title>
+	<title> Contact Us - Location | Forward Fitness Club </title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<meta name="description" content="Forward Fitness Club provides a complimentary one-week trial membership. Contact us today to learn more.">
+	<link rel="preconnect" href="https://fonts.googleapis.com" >
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body> 
+	<!--Skip to Content Link-->
+	<a class="skip" href="#content">Skip to Content</a>
 	<div id="container">
-		<header> 
+		<header id="ffc-logo"> 
 			<h1> Forward Fitness Center </h1> 
 			<a href="index.html"> <img src="images/forward-fitness-logo.png"
 				alt="forward fitness club logo"></a>
 		</header>
-		<nav>
+		
+
+		<!-- Mobile Nav-->
+
+		<nav class="mobile-nav">
+			<div id="menu-links">
+				<a href="index.html">Home</a>
+				<a href="about.html">About Us</a>
+				<a href="classes.html">Classes</a>
+				<a href="nutrition.html">Nutrition</a>
+				<a href="contact.html">Contact Us</a>
+			</div>
+			<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;</div>
+			</a>
+		</nav>
+		<nav class="tablet-desktop">
 		<ul>
 					<li><a href="index.html">Home </a></li>
 					<li><a href="about.html">About </a></li>
@@ -28,13 +47,14 @@
 					<li><a href="contact.html">Contact us</a></li>
 			</ul>
 		</nav>
-		<main>
+		<main id="content">
 		
 			<div id="contact">
 		<h2>Ready to get started? Contact us today.</h2>
 		<h4 class="mobile tel-link"><a href="tel:+8145559608">(814) 555-9608</a></h4>
-		<h4 class="tablet-desktop tel-num">(814 555-9608</h4>
+		<h4 class="tablet-desktop tel-num">814 555-9608</h4>
 		<h4>Email us: <a href="malito:forwardfitness@club.net" class="contact-email-link"> forwardfitness@club.net </a></h4>
+		<h3 class="offer" onclick="discount()" id="special">View Promo Code</h3>
 		<h4>Visit us at: 1275 Channel Center Street,Boston, MA 02210</h4>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.8517435171166!2d-71.05402008778762!3d42.3456841358887
 		25!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a7dc2b67e7b%3A0x36ec93427cd9c5f1!2sChannel%20Center%20St%2
@@ -86,11 +106,22 @@
 			
 			
 		</main>
-	b  </div>
-	<footer> 
+	  </div>
+	  <footer> 
+		<div class="copyright">
 	<p>&copy; Copyright 2023. All rights reserved, </p>
-	<P> forwardfitness@club.net</p>
+	<P><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
+		</div>
+		<div class="social">
+			<a href="https://www.facebook.com.fwdfitclub" target="_blank">
+			<img src="images/facebook-logo.png" alt="black and white Facebook logo"></a>
+			<a href="https://www.twitter.com/fwdfitclub" target="_blank"><img src="images/twitter-logo-png" alt="black and white twitter logo"></a>
 	
+			
+	
+		
+		</div>
 	</footer>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
