--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -24,16 +24,27 @@
 		
 	</div>
 	
-	</figure>
+	<nav class="mobile-nav">
+			<div id="menu-links">
+				<a href="index.html">Home</a>
+				<a href="projects.html">Projects</a>
+				<a href="contact.html">Contact Me</a>
+				<a href="about.html">More about me</a>
+				<a href="new.html">The steps of meditation</a>
+			</div>
+			<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;</div>
+			</a>
+		</nav>
 	<nav>
-		<div class="lists">
+		<div class="tablet-desktop">
 			<ul>
 
 			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
 			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
 			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
-			<li><a href="about.html">More about me</a></li>
-			<li><a href="new.html">The steps of meditation</a></li>
+			<li><a href="about.html">More about me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="new.html">The steps of meditation</a>&nbsp; &#9632; &nbsp;</li>
 			</ul>
 		</div>
 	</nav>
