--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	
 	</figure>
-	<nav>
+	<nav class="tablet-desktop>
 		<div class="lists">
 			<ul>
 
@@ -36,7 +36,18 @@
 			</ul>
 		</div>
 	</nav>
-	
+	<nav class="mobile-nav">
+			<div id="menu-links">
+				<a href="index.html">Home</a>
+				<a href="projects.html">Projects</a>
+				<a href="contact.html">Contact Me</a>
+				<a href="about.html">More about me</a>
+				<a href="new.html">The steps of meditation</a>
+			</div>
+			<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;</div>
+			</a>
+		</nav>
 	<main>
 	
 	</main>
