--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 				<a href="about.html">More about me</a>
 				<a href="new.html">The steps of meditation</a>
 			</div>
+			<button class="hamburger">
 			<a class="menu-icon" onclick="hamburger()">
 				<div>&#9776;</div>
 			</a>
+			</button> 
 		</nav>
 </div>
 
