--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<a href="new.html">The steps of meditation</a>
 			</div>
 			<button class="hamburger">
+				<div class="bar"></div>
 			<a class="menu-icon" onclick="hamburger()">
 				<div>&#9776;</div>
 			</a>
