--- a/index.html
+++ b/index.html
@@ -13,36 +13,34 @@
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
 
-	</head> 
-<body>
+	</head>
 	
-	<div class="mobile">	
-	<header> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
-	
-		<img src="images/portfolio3.jpg" alt="a picture taken in photobooth" class="center">
+	<section >
 		
-	<main>
+		<header id="ffc-logo"> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
 
-		<nav class="mobile-nav">
+	 <body>
+		
+	
+	
+		
+		
+	<!--Mobile navigation-->
+		<nav class="mobilenav">
 			<div id="menu-links">
-				<a href="index.html">Home</a>
+				<a href="index.html" >Home</a>
 				<a href="projects.html">Projects</a>
 				<a href="contact.html">Contact Me</a>
 				<a href="about.html">More about me</a>
 				<a href="new.html">The steps of meditation</a>
 			</div>
-			<button class="hamburger">
-				<div class="bar"></div>
-			<a class="menu-icon" onclick="hamburger()">
-				<div>&#9776;</div>
+		<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;<div>
 			</a>
-			</button> 
 		</nav>
-</div>
+<!--end-->
 
-	
-	<nav class="tablet-desktop>
-		<div class="lists">
+	<nav class="tablet-desktop">
 			<ul>
 
 			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
@@ -51,12 +49,14 @@
 			<li><a href="about.html">More about me</a></li>
 			<li><a href="new.html">The steps of meditation</a></li>
 			</ul>
-		</div>
 	</nav>
 	
 	
+	</canvas>
+	</section>
 	
-	</main>
+	
+	
 	
 	<footer> 
  
@@ -66,6 +66,7 @@
 	
 	
 	</footer>
+	<script src="scripts/script.js"></script>
 </div>
 </body>
 </html>
