--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,36 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head> 
 <body>
-	<div class="mobile">
+	
 <!-- The purpose is that it shows the title of the page, static
 -->
 			<header> <h1>Contact me</h1> </header>
 <!-- The purpose is so that you can switch back and forth between pages, static
 -->
-	<nav>
-		<div class="lists">
-			<ul>
-
-			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
-			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
-			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
-			<li><a href="about.html">More about me</a></li>
-			</ul>
+	<nav class="mobilenav">
+		<div id="menu-links">
+			<a href="index.html" >Home</a>
+			<a href="projects.html">Projects</a>
+			<a href="contact.html">Contact Me</a>
+			<a href="about.html">More about me</a>
+			<a href="new.html">The steps of meditation</a>
 		</div>
-	
+	<a class="menu-icon" onclick="hamburger()">
+			<div>&#9776;<div>
+		</a>
 	</nav>
+<!--end-->
+
+<nav class="tablet-desktop">
+		<ul>
+
+		<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+		<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+		<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+		<li><a href="about.html">More about me</a></li>
+		<li><a href="new.html">The steps of meditation</a></li>
+		</ul>
+</nav>
 	
 	<main>
 	<div id="contact">
