--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
 	</head> 
-<header class="center"> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
+<header class="center" id="ffc-logo"> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
 
 	
 
