--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 	
 	
-	<header><h1>Facts about me. &#128158;</h1> </header>
+	<header id="ffc-logo"><h1>Facts about me. &#128158;</h1> </header>
 	<figure>
 		
 	
