--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	
 <!-- The purpose is that it shows the title of the page, static
 -->
-			<header> <h1>Contact me</h1> </header>
+			<header id="ffc-logo"> <h1>Contact me</h1> </header>
 <!-- The purpose is so that you can switch back and forth between pages, static
 -->
 	<nav class="mobilenav">
