--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				<a href="contact.html">Contact Me</a>
 				<a href="about.html">More about me</a>
 				<a href="new.html">The steps of meditation</a>
+				<a href="favorites.html">Favorites</a>
 			</div>
 		<a class="menu-icon" onclick="hamburger()">
 				<div>&#9776;<div>
@@ -48,6 +49,7 @@
 			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
 			<li><a href="about.html">More about me</a></li>
 			<li><a href="new.html">The steps of meditation</a></li>
+			<li><a href="favorites.html">Favorites</a></li>
 			</ul>
 	</nav>
 	
