--- a/about.html
+++ b/about.html
@@ -19,30 +19,33 @@
 	<figure>
 		
 	
-	<nav class="mobilenav">
-		<div id="menu-links">
-			<a href="index.html" >Home</a>
-			<a href="projects.html">Projects</a>
-			<a href="contact.html">Contact Me</a>
-			<a href="about.html">More about me</a>
-			<a href="new.html">The steps of meditation</a>
-		</div>
-	<a class="menu-icon" onclick="hamburger()">
-			<div>&#9776;<div>
-		</a>
-	</nav>
+		<!--Mobile navigation-->
+		<nav class="mobilenav">
+			<div id="menu-links">
+				<a href="index.html" >Home</a>
+				<a href="projects.html">Projects</a>
+				<a href="contact.html">Contact Me</a>
+				<a href="about.html">More about me</a>
+				<a href="new.html">The steps of meditation</a>
+				<a href="favorites.html">Favorites</a>
+			</div>
+		<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;<div>
+			</a>
+		</nav>
 <!--end-->
 
-<nav class="tablet-desktop">
-		<ul>
+	<nav class="tablet-desktop">
+			<ul>
 
-		<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
-		<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
-		<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
-		<li><a href="about.html">More about me</a></li>
-		<li><a href="new.html">The steps of meditation</a></li>
-		</ul>
-</nav>
+			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
+			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
+			<li><a href="about.html">More about me</a></li>
+			<li><a href="new.html">The steps of meditation</a></li>
+			<li><a href="favorites.html">Favorites</a></li>
+			</ul>
+	</nav>
 	
 	<main>
 	<article id="info">
